--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@angular-eslint/eslint-plugin": "17.5.2",
     "@angular-eslint/eslint-plugin-template": "17.5.2",
     "@angular-eslint/schematics": "17.5.2",
-    "angular-eslint/template-parser": "17.5.2",
+    "@angular-eslint/template-parser": "17.5.2",
     "@angular/cli": "^17.1.1",
     "@angular/compiler-cli": "^17.1.0",
     "@types/express": "^4.17.17",
