--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.1",
     "express": "^4.18.2",
+    "ngx-socket-io": "^4.6.1",
     "prettier": "^3.3.3",
     "rxjs": "~7.8.0",
     "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
